[gd_scene load_steps=11 format=3 uid="uid://davebhs2q7lsw"]

[ext_resource type="Script" uid="uid://1b5ckkgqyo8b" path="res://scripts/room1.gd" id="1_277jj"]
[ext_resource type="Resource" uid="uid://u3hvcec6gbve" path="res://dialogue/1_ending.dialogue" id="2_21e2k"]
[ext_resource type="Texture2D" uid="uid://wx3bsq5v6uu1" path="res://images/1.png" id="2_54ujy"]
[ext_resource type="Resource" uid="uid://bwwq85kf4q31y" path="res://dialogue/1_ventilation.dialogue" id="3_21e2k"]
[ext_resource type="PackedScene" uid="uid://d1awp8vrnet6x" path="res://scenes/hint.tscn" id="4_21e2k"]
[ext_resource type="Texture2D" uid="uid://c0nqcu5pusm74" path="res://images/1_table.png" id="6_21e2k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54ujy"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_21706"]
Panel/styles/panel = SubResource("StyleBoxFlat_54ujy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21e2k"]
bg_color = Color(0.7254902, 0.7254902, 0.7254902, 1)

[sub_resource type="Theme" id="Theme_nrmkl"]
Panel/styles/panel = SubResource("StyleBoxFlat_21e2k")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_277jj")
ending = ExtResource("2_21e2k")
ventilation = ExtResource("3_21e2k")

[node name="1" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.596875, 0.5607639)
texture = ExtResource("2_54ujy")

[node name="ShowHint" type="Button" parent="." groups=["Buttons"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 985.0
offset_top = 38.0
offset_right = 1132.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Hint"

[node name="ShowOpdracht" type="Button" parent="." groups=["Buttons"]]
modulate = Color(1, 1, 1, 0)
offset_left = 713.0
offset_top = 318.0
offset_right = 1008.0
offset_bottom = 488.0

[node name="Ventilation" type="Button" parent="." groups=["Buttons"]]
modulate = Color(1, 1, 1, 0)
offset_left = 674.0
offset_top = 42.0
offset_right = 969.0
offset_bottom = 212.0

[node name="Hint" parent="." instance=ExtResource("4_21e2k")]
visible = false

[node name="Opdracht" type="Panel" parent="."]
visible = false
offset_left = 55.0
offset_top = 16.0
offset_right = 1105.0
offset_bottom = 628.0
size_flags_vertical = 4
theme = SubResource("Theme_21706")

[node name="InnerBox" type="Panel" parent="Opdracht"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
offset_left = 17.0
offset_top = 11.0
offset_right = 1031.0
offset_bottom = 602.0
grow_horizontal = 2
theme = SubResource("Theme_nrmkl")

[node name="Label" type="Label" parent="Opdracht/InnerBox"]
layout_mode = 0
offset_left = 66.0
offset_top = 85.0
offset_right = 959.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Met een bepaald gas kan de Bloedtak buiten bewustzijn raken voor een tijdje. Dit is het fictieve gas: Aetherol. Jullie moeten dit gas via de gasleiding in de juiste hoeveelheid zien binnen te brengen in de ruimte waar de Bloedtak zit. Bereken de concentratie van Aetherol in de lucht die er nodig is om de Bloedtak tijdelijk uit te schakelen.

Gebruik de tabel hiernaast."
autowrap_mode = 2

[node name="Title" type="Label" parent="Opdracht/InnerBox"]
layout_mode = 0
offset_left = 442.0
offset_top = 29.0
offset_right = 552.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 24
text = "Opdracht"

[node name="LineEdit" type="LineEdit" parent="Opdracht/InnerBox"]
layout_mode = 0
offset_left = 228.0
offset_top = 508.0
offset_right = 781.0
offset_bottom = 564.0

[node name="Antwoord" type="Label" parent="Opdracht/InnerBox"]
layout_mode = 0
offset_left = 230.0
offset_top = 475.0
offset_right = 387.0
offset_bottom = 498.0
text = "Voer je antwoord in mg/m^3:"

[node name="HideOpdracht" type="Button" parent="Opdracht"]
layout_mode = 0
offset_left = 930.0
offset_top = 30.0
offset_right = 1012.0
offset_bottom = 80.0
text = "x"

[node name="1Table" type="Sprite2D" parent="Opdracht"]
position = Vector2(751, 393)
texture = ExtResource("6_21e2k")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="ShowHint" to="Hint" method="_on_show_hint_pressed"]
[connection signal="pressed" from="ShowOpdracht" to="." method="_on_show_opdracht_pressed"]
[connection signal="pressed" from="Ventilation" to="." method="_on_ventilation_pressed"]
[connection signal="text_submitted" from="Opdracht/InnerBox/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Opdracht/HideOpdracht" to="." method="_on_hide_opdracht_pressed"]
